@@ -249,8 +249,15 @@ if ($xoopsConfig['use_ssl'] && isset($_POST[$xoopsConfig['sslpost_name']]) && $_
 	}
     @ini_set('session.gc_maxlifetime', $xoopsConfig['session_expire'] * 60);
 }
+
 session_set_save_handler(array(&$sess_handler, 'open'), array(&$sess_handler, 'close'), array(&$sess_handler, 'read'), array(&$sess_handler, 'write'), array(&$sess_handler, 'destroy'), array(&$sess_handler, 'gc'));
+if ( ! isset( $_SESSION['SERVER_GENERATED_SID'] ) ) {
+	session_destroy(); // destroy all data in session
+}
+
 session_start();
+session_regenerate_id(); // generate a new session identifier
+$_SESSION['SERVER_GENERATED_SID'] = true;
 
 // Remove expired session for xoopsUserId
 if ( $xoopsConfig['use_mysession'] && $xoopsConfig['session_name'] != '' && !isset($_COOKIE[$xoopsConfig['session_name']]) && !empty($_SESSION['xoopsUserId']) ) {
